--- a/views/login.erb
+++ b/views/login.erb
@@ -2,5 +2,6 @@
 
 <form method="POST" action="/login">
   <p> username: <input type="text" name="name"></p>
+  <p> password: <input type="password" name="password"></p>
   <input type="submit">
 </form>
