--- a/views/event/new.erb
+++ b/views/event/new.erb
@@ -3,11 +3,14 @@
   <p> dtend: <input type="datetime-local" name="dtend"></p>
   <p> building: <input type="text" name="building"></p>
   <p> hostname: <input type="text" name="hostname"></p>
-  <p> building: <input type="text" name="building"></p>
+  <p> building: <select name="building"><% @buildings.each do |b| %><option value="<%= b.name %>"><%= b.description %></option><% end %></select> </p>
   <p> enterprise: <select name="enterprise"><option value=true>true</option><option value=false>false</option></select>
+  <p> description: <input type="text" name="description"></p>
+  <p> ticketno: <input type="text" name="ticketno"></p>
+  <p> helpdesk: <select name="helpdesk"><% @helpdesks.each do |h| %><option value="<%= h.name %>"><%= h.name %></option><% end %></select> </p>
+  <p> downtime: <select name="downtime"><option value=true>true</option><option value=false>false</option></select>
   <input type='hidden' name='submitip' value="<%= @loggedin.name %>">
-  
-  <input type="submit">
+  <p> <input type="submit">
 </form>
 
 t.datetime "dtstart" 
